[gd_scene load_steps=5 format=3 uid="uid://1a1ip2k7trg1"]

[ext_resource type="Script" uid="uid://bcxfehir5j1k4" path="res://feature/items/item_display.gd" id="1_evm55"]
[ext_resource type="Texture2D" uid="uid://ueefhaj6v7bc" path="res://icon.svg" id="2_5a5hl"]

[sub_resource type="Gradient" id="Gradient_r1ine"]
interpolation_mode = 2
interpolation_color_space = 1
offsets = PackedFloat32Array(0.00406504, 1)
colors = PackedColorArray(1, 1, 1, 0.368627, 1, 1, 1, 0)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_eew1w"]
gradient = SubResource("Gradient_r1ine")
fill_from = Vector2(1, 1)
metadata/_snap_enabled = true

[node name="ItemDisplay" type="MarginContainer"]
show_behind_parent = true
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2
theme_override_constants/margin_left = 2
theme_override_constants/margin_top = 2
theme_override_constants/margin_right = 2
theme_override_constants/margin_bottom = 2
script = ExtResource("1_evm55")

[node name="RaretyRect" type="TextureRect" parent="."]
self_modulate = Color(0.317647, 1, 1, 1)
layout_mode = 2
texture = SubResource("GradientTexture2D_eew1w")
expand_mode = 1

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 2
texture = ExtResource("2_5a5hl")
expand_mode = 1
stretch_mode = 5

[node name="LabelAmount" type="Label" parent="."]
layout_mode = 2
size_flags_horizontal = 8
size_flags_vertical = 8
mouse_filter = 1
text = "Amount"
horizontal_alignment = 2
vertical_alignment = 2
